CSS fix scrollbar for the note list

--- a/study49-test-notes-app/style.css
+++ b/study49-test-notes-app/style.css
@@ -4,9 +4,10 @@ body {
 
 ul {
   max-height: 740px;
-  overflow: scroll;
+  overflow-y: scroll;
   margin: 0 1.6rem 0 0;
   padding: 0;
+  padding-right: 12px;
   list-style: none;
 }
 
